// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ClickPoint /> renders with default props: default props 1`] = `
<svg
  className="sd-a-click-point"
  onClick={[MockFunction]}
  tabIndex={0}
  x="50%"
  y="50%"
>
  <circle
    className="sd-a-click-point__circle"
    cx="0"
    cy="0"
    r={16}
    strokeWidth={2}
  />
  <rect
    height={2}
    strokeWidth="0"
    width={10}
    x={-5}
    y={-1}
  />
  <rect
    height={10}
    strokeWidth="0"
    width={2}
    x={-1}
    y={-5}
  />
</svg>
`;

exports[`<ClickPoint /> renders with props: with props 1`] = `
<svg
  className="sd-a-click-point"
  onClick={[Function]}
  tabIndex={0}
  x="25%"
  y="40%"
>
  <circle
    className="sd-a-click-point__circle"
    cx="0"
    cy="0"
    r={16}
    strokeWidth={2}
  />
  <rect
    height={2}
    strokeWidth="0"
    width={10}
    x={-5}
    y={-1}
  />
  <rect
    height={10}
    strokeWidth="0"
    width={2}
    x={-1}
    y={-5}
  />
</svg>
`;
